feat: finish base for login handler
